--- a/.hintrc
+++ b/.hintrc
@@ -11,6 +11,12 @@
           "padding-block"
         ]
       }
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
     ]
   }
 }
